# third_party_opencore-amr

./: OAT.xml  README.OpenSource  README_zh.md  bundle.json
amrnb/: wrapper.cpp
opencore/: BUILD.gn
